--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PARKLANE - Log in</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
+
+  <!-- Agregar SDK de Firebase y configuración -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth.js"></script>
+  <script src="firebase-config.js"></script>
+
+  <script>
+    const auth = firebase.auth();
+
+    function iniciarSesion() {
+        const email = document.querySelector('input[type="email"]').value;
+        const password = document.querySelector('input[type="password"]').value;
+
+        auth.signInWithEmailAndPassword(email, password)
+            .then((userCredential) => {
+                // Inicio de sesión exitoso, redirigir a la pantalla de selección de roles
+                window.location.href = "seleccion-roles.html";
+            })
+            .catch((error) => {
+                const errorMessage = error.message;
+                alert(errorMessage);
+            });
+    }
+  </script>
 </head>
 <body>
   <div class="container">
@@ -13,11 +37,12 @@
     <form>
       <input type="email" placeholder="Email" required>
       <input type="password" placeholder="Password" required>
-      <button type="submit">Log in</button>
+      <button type="button" onclick="iniciarSesion()">Log in</button>
     </form>
     <p>Don't have an account? <a href="#">Sign up</a></p>
     <button>How it works</button>
   </div>
 </body>
 </html>
+
 
