--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PARKLANE - Log in</title>
-  <link rel="stylesheet" href="src/css/styles.css">
-
-  <!-- Agregar SDK de Firebase y configuración -->
-  <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth.js"></script>
-  <script src="firebase-config.js"></script>
-
-  <script>
-    const auth = firebase.auth();
-
-    function iniciarSesion() {
-        const email = document.querySelector('input[type="email"]').value;
-        const password = document.querySelector('input[type="password"]').value;
-
-        auth.signInWithEmailAndPassword(email, password)
-            .then((userCredential) => {
-                // Inicio de sesión exitoso, redirigir a la pantalla de selección de roles
-                window.location.href = "seleccion-roles.html";
-            })
-            .catch((error) => {
-                const errorMessage = error.message;
-                alert(errorMessage);
-            });
-    }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tu Aplicación React</title>
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react-router-dom@5/umd/react-router-dom.min.js"></script>
+    <!-- Agrega los scripts de React y React Router en el head -->
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react-router-dom@5/umd/react-router-dom.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>PARKLANE</h1>
-    <p>Park before arriving</p>
-    <form>
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
-      <button type="button" onclick="iniciarSesion()">Log in</button>
-    </form>
-    <p>Don't have an account? <a href="#">Sign up</a></p>
-    <button>How it works</button>
-  </div>
+    <!-- Aquí es donde se renderizará tu aplicación React -->
+    <div id="root"></div>
+
+    <!-- Agrega tu archivo bundle de React después de los scripts -->
+    <script src="bundle.js"></script>
 </body>
 </html>
-
-
